# nmrs-tui

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  config.ron  justfile  release.toml
.github/workflows/: ci.yml  release.yml
assets/: demo.avif
src/: action.rs  app.rs  cli.rs  config.rs  events.rs  logger.rs  main.rs  network.rs  network_manager.rs  timer.rs  tui.rs
src/ui/: area.rs  help.rs  input.rs  list.rs  margin.rs  mod.rs  popup.rs  style_config.rs  table.rs  toast.rs
