[package]
name = "nmrs-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
crossterm = "0.29.0"
ratatui = "0.30.0"
serde = "1.0.228"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
nmrs = { git = "https://github.com/cachebag/nmrs.git" }
zbus = "5.15.0"
log = "0.4.29"
simplelog = "0.12.2"
dirs = "6.0.0"
